Finished createLink function. Tomorrow, I am gonna write the document.
Signed-off-by: Huikang Yi <huikangyi@gmail.com>

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 				</div>
 				<div class = "box">
 					<span class = "fa fa-chain" title = "createlink"></span>
-					<span class = "fa fa-chain-broken" title = ""></span>
+					<span class = "fa fa-chain-broken" title = "unlink"></span>
 					<span class = "fa fa-puzzle-piece" title = "insertmarkdown"></span>
 				</div>
 				<div class = "box">
