缓存, 开始下一步: 重新组织js文件
Signed-off-by: Huikang Yi <huikangyi@gmail.com>

--- a/index.html
+++ b/index.html
@@ -29,58 +29,57 @@
 					<li>
 						<span>Edit</span>
 						<ul>
-							<li><span title = "undo">Undo</span></li>
-							<li><span title = "redo">Redo</span></li>
+							<li><span title = "undo">Undo<p class = "hotkey">Ctrl + Z</p></span></li>
+							<li><span title = "redo">Redo<p class = "hotkey">Ctrl + Y</p></span></li>
 							<hr />
-							<li><span title = "copy">Copy</span></li>
-							<li><span title = "cut">Cut</span></li>
-							<li><span title = "delete">Delete</span></li>
-							<li><span title = "paste">Paste</span></li>
-							<li><span title = "selectall">Select All</span></li>
+							<li><span title = "copy"><p class = "fa fa-plus"></p>Copy<p class = "hotkey">Ctrl + C</p></span></li>
+							<li><span title = "cut"><p class = "fa fa-plus"></p>Cut<p class = "hotkey">Ctrl + X</p></span></li>
+							<li><span title = "delete"><p class = "fa fa-plus"></p>Delete<p class = "hotkey">Ctrl + D</p></span></li>
+							<li><span title = "paste"><p class = "fa fa-plus"></p>Paste<p class = "hotkey">Ctrl + P</p></span></li>
+							<li><span title = "selectall"><p class = "fa fa-plus"></p>Select All<p class = "hotkey">Ctrl + A</p></span></li>
 							<hr />
-							<li><span>Find and Replace...</span></li>
+							<li><span>Find and Replace<p class = "hotkey">Ctrl + H</p></span></li>
 						</ul>
 					</li>
 					<li>
 						<span>Insert</span>
 						<ul>
-							<li><span title = "insertimage">Image...</span></li>
-							<li><span title = "createlink">Link...</span></li>
-							<li><span>Equation...</span></li>
-							<li><span>Drawing...</span></li>
-							<li><span>Table...</span></li>
-							<li><span>Footnote...</span></li>
-							<li><span>Special Characters...</span></li>
-							<li><span title = "inserthorizontalrule">Horizontal Line...</span></li>
+							<li><span title = "insertimage">Image...<p class = "hotkey">no hotkey</p></span></li>
+							<li><span title = "createlink">Link...<p class = "hotkey">no hotkey</p></span></li>
+							<hr>
+							<li><span>Equation...<p class = "hotkey">no hotkey</p></span></li>
+							<li><span>Drawing...<p class = "hotkey">no hotkey</p></span></li>
+							<li><span>Footnote...<p class = "hotkey">no hotkey</p></span></li>
+							<li><span>Special Characters...<p class = "hotkey">no hotkey</p></span></li>
+							<li><span title = "inserthorizontalrule">Horizontal Line...<p class = "hotkey">no hotkey</p></span></li>
 						</ul>
 					</li>
 					<li>
 						<span>Format</span>
 						<ul>
-							<li><span title = "bold">Bold</span></li>
-							<li><span title = "italic">Italic</span></li>
-							<li><span title = "underline">Underline</span></li>
-							<li><span title = "strikethrough">Strikethrough</span></li>
-							<li><span title = "superscript">Supperscript</span></li>
-							<li><span title = "subscript">Subscript</span></li>
+							<li><span title = "bold"><p class = "fa fa-bold"></p>Bold<p class = "hotkey">Ctrl + B</p></span></li>
+							<li><span title = "italic"><p class = "fa fa-italic"></p>Italic<p class = "hotkey">Ctrl + I</p></span></li>
+							<li><span title = "underline"><p class = "fa fa-underline"></p>Underline<p class = "hotkey">Ctrl + U</p></span></li>
+							<li><span title = "strikethrough"><p class = "fa fa-strikethrough"></p>Strikethrough</span></li>
+							<li><span title = "superscript"><p class = "fa fa-superscript"></p>Superscript</span></li>
+							<li><span title = "subscript"><p class = "fa fa-subscript"></p>Subscript</span></li>
 							<hr />
 							<li>
-								<span>Paragraph Styles</span>
+								<span><p class = "fa fa-paragraph"></p>Paragraph Styles...<p class = "hotkey fa fa-caret-right"></p></span>
 								<ul>
-									<li><span title = "normaltext">Normal Text</span></li>
-									<li><span title = "h1">H1</span></li>
-									<li><span title = "h2">H2</span></li>
-									<li><span title = "h3">H3</span></li>
-									<li><span title = "h4">H4</span></li>
-									<li><span title = "h5">H5</span></li>
-									<li><span title = "h6">H6</span></li>
+									<li><span title = "h1">H1<p class = "hotkey">Shift + Ctrl + 1</p></span></li>
+									<li><span title = "h2">H2<p class = "hotkey">Shift + Ctrl + 2</p></span></li>
+									<li><span title = "h3">H3<p class = "hotkey">Shift + Ctrl + 3</p></span></li>
+									<li><span title = "h4">H4<p class = "hotkey">Shift + Ctrl + 4</p></span></li>
+									<li><span title = "h5">H5<p class = "hotkey">Shift + Ctrl + 5</p></span></li>
+									<li><span title = "h6">H6<p class = "hotkey">Shift + Ctrl + 6</p></span></li>
 									<hr />
 									<li><span title = "quoteblock">Quoteblock</span></li>
 									<li><span title = "code">Code</span></li>
 								</ul>
 							</li>
 							<li>
-								<span>Align</span>
+								<span>Align...<p class = "hotkey fa fa-caret-right"></p></span>
 								<ul>
 									<li><span title = "justifyleft">Left</span></li>
 									<li><span title = "justifyright">Right</span></li>								
@@ -89,7 +88,7 @@
 								</ul>
 							</li>
 							<li>
-								<span>Lists</span>
+								<span>Lists...<p class = "hotkey fa fa-caret-right"></p></span>
 								<ul>
 									<li><span title = "insertorderedList">OrderedList</span></li>
 									<li><span title = "insertunorderedList">UnorderedList</span></li>
@@ -100,17 +99,29 @@
 						</ul>
 					</li>
 					<li>
-						<span>Tools</span>
-						<ul>
-							<li><span href=""></span></li>
-							<li><span href=""></span></li>
-						</ul>
-					</li>
-					<li>
 						<span>Table</span>
 						<ul>
-							<li><span href=""></span></li>
-							<li><span href=""></span></li>
+							<li>
+								<span><p class = "fa fa-th"></p>Insert Table...<p class = "hotkey fa fa-caret-right"></p></span>
+								<table>
+									<tr><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></tr>
+									<tr><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></tr>
+									<tr><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></tr>
+									<tr><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></tr>
+									<tr><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></tr>
+									<tr><td colspan = "10"><p id = "tablewidth">4</p> &times; <p id = "tableheight">4</p></td></tr>
+								</table>
+							</li>
+							<hr />
+							<li><span><p class = "fa fa-plus"></p>insert row above</span></li>
+							<li><span><p class = "fa fa-plus"></p>insert row blow</span></li>
+							<li><span><p class = "fa fa-plus"></p>insert column left </span></li>
+							<li><span><p class = "fa fa-plus"></p>insert column right</span></li>
+							<hr />
+							<li><span><p class = "fa fa-minus"></p>delete row above</span></li>
+							<li><span><p class = "fa fa-minus"></p>delete row blow</span></li>
+							<li><span><p class = "fa fa-minus"></p>delete column left </span></li>
+							<li><span><p class = "fa fa-minus"></p>delete column right</span></li>
 						</ul>
 					</li>
 				</ul>
@@ -216,6 +227,8 @@
 				</tr>
 			</table>
 			<div class = "south"><button class = "apply">Apply</button></div>
+		</div>
+		<div id = "dialogshadow">
 		</div>
 	</body>
 </html>
